Plugin Clean-up

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,7 @@
-#PocketMine Plugin with 4.1 API
-#Name: DunxTranslations
-#Authur: DunxandMinecraft
-#API Version: 4.1
-#Plugin Version: 0.1 Alpha
+Name: DunxTranslations
+Authur: DunxandMinecraft
+API Version: 4.1
+Plugin Version: 0.1 Alpha
 
 #Remember to write clean code!
 
